# user_auth_service

./: .gitignore  Cargo.toml  Example request 1.txt  login.html  register.html
src/: db_driver.rs  err_string.rs  helper_functions.rs  jwt_process.rs  main.rs
src/client/: mod.rs
src/controller/: http_request.rs  http_response.rs  http_response_code.rs  mod.rs  oauth_controller.rs  user_controller.rs
src/services/: user_service.rs
src/user/: mod.rs  security_policy.rs
